--- a/quiz.html
+++ b/quiz.html
@@ -6,19 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css"/>
-
 </head>
 <body>
-    <header>
-        <h1>Coding Quiz</h1>
-    </header>
-
     <main class="card">
-        <button id="start">Start Quiz</button>
+        <button id="next">Next Problem</button>
         <h2 id="questionArea"></h2>
-        <!-- <ul id="questionList"></ul> -->
     </main>
-
     <script src="assets/js/script.js"></script>
 </body>
 </html>
