add buttons for choices of each question

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="card">
         <button id="start">Start Quiz</button>
         <h2 id="questionArea"></h2>
-        <ul id="questionList"></ul>
+        <ul id="buttons"></ul>
     </main>
 
     <script src="assets/js/script.js"></script>
