add timer feature

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button id="start">Start Quiz</button>
         <h2 id="questionArea"></h2>
         <ul id="buttons"></ul>
+        <h2 class="time" style="text-align:center;"></h2>
     </main>
 
     <script src="assets/js/script.js"></script>
