--- a/result.html
+++ b/result.html
@@ -11,7 +11,7 @@
     <h1>Display a Submit Button</h1>
 
     <form id="form">
-        <input type="text" id="initials" placeholder="Enter your initials" />
+        <input type="text" id="inputField" placeholder="Enter your initials" />
         <button id="submit">Submit</button>
     </form> 
     <script src="assets/js/script.js"></script>
