add renderInitials() and init()

--- a/result.html
+++ b/result.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
-<body>
+<body id="resultBody">
     <h1>Display a Submit Button</h1>
 
     <form id="form">
