add goBack button that redirects to the quiz

--- a/result.html
+++ b/result.html
@@ -12,6 +12,7 @@
         <input type="text" id="inputField" placeholder="Enter your initials" />
         <button id="submit">Submit</button> 
     </form> 
+    <button id="goBack">Go back</button>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
