display score and user initial

--- a/result.html
+++ b/result.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body id="resultBody">
+    <header>
+        <h1></h1>
+    </header>
     <form id="form">
         <input type="text" id="inputField" placeholder="Enter your initials" />
         <button id="submit">Submit</button> 
     </form> 
     <button id="goBack">Go back</button>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/result.js"></script>
 </body>
 </html>
