--- a/result.html
+++ b/result.html
@@ -16,6 +16,7 @@
         <button id="submit">Submit</button> 
     </form> 
     <button id="goBack">Go back</button>
+    <button id="clear">Clear</button>
     <script src="assets/js/result.js"></script>
 </body>
 </html>
