center the elements inside result.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Coding Quiz</h1>
     </header>
 
-    <main class="card">
+    <main class="box">
         <button id="start">Start Quiz</button>
         <h2 id="questionArea"></h2>
         <ul id="buttons"></ul>
