--- a/result.html
+++ b/result.html
@@ -11,12 +11,15 @@
     <header>
         <h1></h1>
     </header>
-    <form id="form">
+    <main class="box">
+        <form id="form">
         <input type="text" id="inputField" placeholder="Enter your initials" />
         <button id="submit">Submit</button> 
-    </form> 
-    <button id="goBack">Go back</button>
-    <button id="clear">Clear</button>
+        </form> 
+        <button id="goBack">Go back</button>
+        <button id="clear">Clear</button>
+    </main>
+    
     <script src="assets/js/result.js"></script>
 </body>
 </html>
