add some styling

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
     <header>
         <h1>Coding Quiz</h1>
+        <h2>This is a quiz to test your knowledge on Javascript.</h2>
     </header>
+    <div id="start">
+        <button id="startBtn">Start Quiz</button>
+    </div>
 
     <main class="box">
-        <button id="start">Start Quiz</button>
         <h2 id="questionArea"></h2>
         <ul id="buttons"></ul>
         <h2 class="time" style="text-align:center;"></h2>
