--- a/result.html
+++ b/result.html
@@ -16,8 +16,11 @@
         <input type="text" id="inputField" placeholder="Enter your initials" />
         <button id="submit">Submit</button> 
         </form> 
-        <button id="goBack">Go back</button>
-        <button id="clear">Clear</button>
+        <div id="navBtns">
+            <button id="goBack">Go back</button>
+            <button id="clear">Clear</button>
+        </div>
+
     </main>
     
     <script src="assets/js/result.js"></script>
